docs/v1.4.5/en/api/campaign/GarrisonRecruitmentCampaignBehavior.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `GarrisonRecruitmentCampaignBehavior`
- [← Area / Back to campaign](./)
- [↑ API Index](../)
- [🏠 Home v1.4.5](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# GarrisonRecruitmentCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class GarrisonRecruitmentCampaignBehavior : CampaignBehaviorBase, IGarrisonRecruitmentBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `Bannerlord.Source/bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/GarrisonRecruitmentCampaignBehavior.cs`

## Overview

`GarrisonRecruitmentCampaignBehavior` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### VolunteerTroop
`public struct VolunteerTroop(Hero ownerNotable, int notableVolunteerArrayIndex)`

**Purpose:** Handles logic related to `volunteer troop`.

### CompareTo
`public int CompareTo(object obj)`

**Purpose:** Handles logic related to `compare to`.

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** Handles logic related to `register events`.

### GetGarrisonChangeExplainedNumber
`public ExplainedNumber GetGarrisonChangeExplainedNumber(Town town)`

**Purpose:** Gets the current value of `garrison change explained number`.

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** Handles logic related to `sync data`.

## Usage Example

```csharp
var value = new GarrisonRecruitmentCampaignBehavior();
value.VolunteerTroop(ownerNotable, 0);
```

## See Also

- [Complete Class Catalog](../catalog)